--- a/css/style.css
+++ b/css/style.css
@@ -87,10 +87,11 @@ button {
 .site-contakt list-image:last-child {
   margin-left: 50px;
 }
-/* .site-nav > .header-link {
-  margin-left: 93px;
-} */
-/* logo */ 
+.contakt-mail {
+  width: 16px;
+  height: 12px;
+  tiil: green;
+}
 
 .logo {
   display: flex
@@ -475,8 +476,17 @@ fill: currentColor;
   align-items: center;
   border-radius: 4px;
   border: 1px solid #AFB1B8;
+  color: #AFB1B8;
 }
-
+.clients-item:hover,
+.clients-item:focus {
+  /* background-color: #AFB1B8; */
+  color: #2196F3;
+  border: 1px solid #2196F3;
+}
+.clients-icon {
+  fill: currentColor;
+}
 /* Footer */
 .footer {
   /* width: 1200px; */
@@ -485,12 +495,32 @@ fill: currentColor;
   padding-bottom: 60px;
   margin: 0 auto;
 }
+
+.footer-container {
+  width: 1200px;
+  /* padding: 0; */
+  padding-left: 15px;
+  padding-right: 15px;
+  /* border: 1px solid red; */
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+}
 .adress {
   text-decoration: none;
-  /* margin-bottom: 60px; */
+  margin-top: 20px;
+  margin-bottom: 0;
+  padding: 0;
+
+}
+.adress-footer {
+  display: inline-block;
 }
 .adress-list {
   list-style: none;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
 }
 .adress-text {
   display: flex;
@@ -513,9 +543,9 @@ fill: currentColor;
   line-height: 1.19;
   color: var(--white-color);
   text-decoration: none;
-  /* margin-top: 60px; */
-  margin-bottom: 9px;
-  display: flex;
+  /* margin-top: 60px;
+  margin-bottom: 50px; */
+  /* display: flex; */
 }
 .card {
   background-color: var(--white-color);
@@ -535,6 +565,65 @@ fill: currentColor;
   line-height: 1.87;
   color: var(--grey-color);
 }
+
+/* Кнопки соц.мереж футер   */
+
+.text-social {
+font-family: Roboto;
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+/* text-transform: uppercase; */
+margin-bottom: 20px;
+color: #FFFFFF;
+}
+.footer-social {
+  width: 206px;
+  /* height: 168px; */
+  display: inline-block;
+  padding-top: 12px;
+  padding-left: 70px;
+  /* box-sizing: border-box; */
+  /* padding-bottom: 100px; */
+}
+.footer * {
+  /* outline: 1px solid red; */
+  list-style: none;
+}
+.list-social {
+  display: flex;
+  text-decoration: none;
+  list-style: none;
+}
+.element-social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+.social-item {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.social-item:hover,
+.social-item:focus {
+  /* background-color: #AFB1B8; */
+  color: #2196F3;
+  border: 1px solid #2196F3;
+}
+.social-icon {
+  fill: #FFFFFF;
+} 
+
+
 /* Кнопки */
 .button-hero {
   background-color: var(--blue-color);
