--- a/css/style.css
+++ b/css/style.css
@@ -568,6 +568,7 @@ fill: currentColor;
   margin-right: auto;
   margin-left: auto;
   display: flex;
+  align-items: baseline;
 }
 .adress {
   text-decoration: none;
@@ -646,11 +647,8 @@ color: #FFFFFF;
   width: 206px;
   /* height: 168px; */
   display: inline-block;
-  padding-top: 12px;
+  /* padding-top: 12px; */
   margin-left: 70px;
-  /* padding-left: 70px; */
-  /* box-sizing: border-box; */
-  /* padding-bottom: 100px; */
 }
 .footer * {
   /* outline: 1px solid red; */
@@ -734,11 +732,20 @@ color: #FFFFFF;
 .button .link .current {
   background-color: #2196f3;
   color: var(--white-color);
-
 }
-/* .link-title {
-    text-decoration: none;
-  } */
+.button-secondary {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  letter-spacing: 0.03em;
+  background-color: var(--blue-color);
+  color: var(--white-color);
+  padding: 6px 22px;
+  border-radius: 4px;
+}
+
 .title {
   text-decoration: none;
 }
@@ -749,11 +756,11 @@ color: #FFFFFF;
 /* Фильтр */
 .filter {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 16px;
+  line-height: 1.63;
   color: var(--black-color);
   text-decoration: none;
-  /* margin-top: 94px; */
+
   margin-top: 0;
   margin-bottom: 50px;
   justify-content: center;
@@ -761,13 +768,16 @@ color: #FFFFFF;
 .filter-btn {
   margin-right: 8px;
 }
-.filter-btn:hover,
-.filter-btn:focus {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-}
-.filter-btn: :last-child {
+.filter-btn:last-child {
   margin-right: 0px;
 }
+.filter-btn:hover,
+.filter-btn:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+
 /* Набор карток */
 .card-set {
   /* outline: 1px solid tomato; */
